--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   country_picker:
     path: ../
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
