Fix package assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+flutter:
+  assets:
+    - lib/src/res/assets/
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.8.2
-
-flutter:
