--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,11 +4,13 @@ linter:
   rules:
     avoid_print: false
     overridden_fields: false
+    sort_pub_dependencies: false
     prefer_initializing_formals: false
     avoid_escaping_inner_quotes: false
     avoid_classes_with_only_static_members: false
     always_use_package_imports: false
     prefer_single_quotes: false
+
     no_leading_underscores_for_local_identifiers: false
 
 analyzer:
