--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     path: ../
   flutter_localizations:
     sdk: flutter
+  
+  flutter_lints: ^4.0.0
 
 dev_dependencies:
   flutter_test:
