Rename package from flutter_country_picker_plus to country_picker in pubspec.yaml. Update homepage and repository links. Refactor import statements in main.dart and country_parser.dart to reflect new package structure.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: flutter_country_picker_plus
+name: country_picker
 description: A flutter package to select a country from a list of countries.
 
 version: 2.0.27
 
-homepage: https://github.com/Daniel-Ioannou
-repository: https://github.com/Daniel-Ioannou/flutter_country_picker
+homepage: https://github.com/mathis6787/flutter_country_picker_plus
+repository: https://github.com/mathis6787/flutter_country_picker_plus
 
 environment:
   sdk: '>=2.12.0 <4.0.0'
